Attempt to get rid of all SonarQube warnings