@@ -15,7 +15,10 @@ public class Product {
     private double price;
     private Date dateAdded;
 
-    public Product() {}
+
+    public Product() {
+        // Empty constructor required by framework
+    }
 
     public Product(UUID uuid, String name, String supplier, Double price) {
         this.uuid = uuid;
@@ -50,7 +53,7 @@ public class Product {
     }
 
     public Double getPrice() {
-        return new Double(price);
+        return Double.valueOf(price);
     }
 
     public void setPrice(Double price) {
@@ -59,8 +62,12 @@ public class Product {
 
     @Override
     public boolean equals(Object o) {
-        if (this == o) return true;
-        if (o == null || getClass() != o.getClass()) return false;
+        if (this == o) {
+            return true;
+        }
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
 
         Product product = (Product) o;
 
